# annabella

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  expr-design.txt  new-ast-node.sh  run.sh  test.sh
ada/: test.adb
examples/: .gitignore
examples/hello-world/: Makefile  compile_flags.txt  fake-std.c  hello-world.adb  test.adb  test.ads
runtime/: annabella-rt.h  atom.c  atom.h  package.c  private.h  scope-init.c  scope.c  scope.h  std-ada-text-io.c  value-bool.c  value-c-function.c  value-function.c  value-integer.c  value-package.c  value-range-type.c  value-string.c  value.c  value.h
src/: ast.c  ast.h  atom.c  atom.h  error.rs  lib.rs  macros.h  macros.rs  main.c  main.rs  object.c  object.h  scope.c  scope.h  static-atom.h  std-ada-text-io.c  std-ada-text-io.h  std.c  std.h  tokenizer.c  tokenizer.h  tokenizer.rs  value.c  value.h
src/codegen/: c_code.rs  context.rs  expr.rs  ident.rs  item.rs  mod.rs  standard.rs  stmt.rs  ty.rs  type_item.rs  value.rs
transpiler/: ast-assignment-stmt.c  ast-call-expr.c  ast-cmp-expr.c  ast-else-stmt.c  ast-elsif-stmt.c  ast-expr-stmt.c  ast-expr.c  ast-function-stmt.c  ast-if-stmt.c  ast-node-implementation.c.template  ast-node.c  ast-node.h  ast-number.c  ast-package-stmt.c  ast-path.c  ast-procedure-stmt.c  ast-return-stmt.c  ast-stmt.c  ast-string.c  ast-suffix-expr.c  ast-value-expr.c  ast-var-declaration.c  ast-with-stmt.c  context.c  context.h  keywords.c  keywords.h  main.c  statement.c  statement.h  str.h  token-stream.c  token-stream.h  tokenizer.c  tokenizer.c.old  tokenizer.h
(+10 files in other folders)
