[package]
name = "annabella"
version = "0.1.0"
authors = ["Martin Michaelis <code@mgjm.de>"]
edition = "2021"
repository = "https://github.com/mgjm/annabella"
license = "GPL-3.0-or-later"

[features]
default = ["span-locations"]
span-locations = []

[dependencies]
anyhow = "1.0.95"
indexmap = "2.7.1"
proc-macro2 = { version = "1.0.93", default-features = false }
quote = { version = "1.0.38", default-features = false }
